--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-dom": "^16.9.14",
+    "chakra-ui-demo": "file:chakra-ui-demo-0.1.0.tgz",
+    "cypress": "^9.5.3",
     "framer-motion": "^4.1.17",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
@@ -25,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
